--- a/resources/style.css
+++ b/resources/style.css
@@ -15,3 +15,21 @@ h4{
     text-align: center;
 
 }
+h2{
+    text-align: center;
+    font-family: Verdana;
+    color: white;
+    font-size: 42px;
+    font-weight: 300;
+}
+p{
+    text-align: center;
+    font-family: Verdana;
+    color:gray;
+    font-size: 21px;
+}
+h5{
+    text-align: right;
+    color:gray;
+
+}
